Ajustes de diseño

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <div id="pokemon"></div>
             </div>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <p>Desarrollado por <a href="https://github.com/jsebasmorales" target="_blank">Sebastian Morales Salazar</a> </p>
+        </footer>
         <script src="./index.js" async></script>
     </body>
 </html>
